--- a/Mono.Addins.GuiGtk3/Mono.Addins.GuiGtk3.csproj
+++ b/Mono.Addins.GuiGtk3/Mono.Addins.GuiGtk3.csproj
@@ -15,8 +15,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+     <Reference Include="gtk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="gdk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="glib-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="pango-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="atk-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+      <Reference Include="gio-sharp, Version=3.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <Reference Include="System.Core" />
+    <Reference Include="cairo-sharp, Version=1.10.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <Reference Include="Mono.Posix" />
-    <PackageReference Include="GtkSharp" Version="3.22.25.98" />
+    <!--<PackageReference Include="GtkSharp" Version="3.22.25.98" />-->
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="icons\**\*.png" LinkBase="icons" />
