--- a/Mono.Addins.Gui/Mono.Addins.Gui.csproj
+++ b/Mono.Addins.Gui/Mono.Addins.Gui.csproj
@@ -8,6 +8,9 @@
     <OutputType>Library</OutputType>
     <AssemblyName>Mono.Addins.Gui</AssemblyName>
     <SchemaVersion>2.0</SchemaVersion>
+     <OutputPath>bin\d</OutputPath>
+     <RuntimeIdentifier>win</RuntimeIdentifier>
+     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>Mono.Addins.Gui</RootNamespace>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\mono-addins.snk</AssemblyOriginatorKeyFile>
